# rocket-league-scraper

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
rocketleague_scraper/: __init__.py  cli.py  config.py  http_client.py  logging_config.py  pipeline.py  reconciliation.py  storage.py  utils.py
rocketleague_scraper/fetchers/: blast_fetcher.py  drekt_fetcher.py  liquipedia_fetcher.py
rocketleague_scraper/parsers/: blast_parser.py  drekt_parser.py  liquipedia_parser.py
