[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "rocketleague-scraper"
version = "0.1.0"
description = "Async structural data extraction pipeline with DOM parsing, resilience, and Parquet export."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Rocket League Scraper" }]
dependencies = [
  "aiosqlite>=0.20.0",
  "beautifulsoup4>=4.12.0",
  "httpx>=0.27.0",
  "loguru>=0.7.2",
  "pandas>=2.2.0",
  "pyarrow>=15.0.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.10.1",
  "rich>=13.7.0",
  "selectolax>=0.3.21",
  "tenacity>=8.3.0",
  "tqdm>=4.66.0",
  "typer>=0.12.0",
  "cloakbrowser>=0.1.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.5.0"
]

[project.scripts]
rl-scraper = "rocketleague_scraper.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["rocketleague_scraper"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
